# meuhmeuh-detector

./: CMakeLists.txt  meuhmeuh_finder.cpp  train_meuhmeuh_detector.cpp  train_shape_predictor.cpp
training/: cow-training.xml
